# DummyRDD

./: pyproject.toml
dummy_spark/: context.py  rdd.py  resultsiterable.py
tests/unit/: test_conf.py  test_context.py  test_rdd.py
